# ChangeLog for sys-apps/hwdata-knoppix
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwdata-knoppix/Attic/ChangeLog,v 1.21 2005/05/31 20:41:02 wolf31o2 Exp $

  31 May 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  hwdata-knoppix-0.107-r1.ebuild:
  Removing Cards link and closing bug #75733.

  31 May 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -hwdata-knoppix-0.8.ebuild, -hwdata-knoppix-0.95.ebuild:
  Cleaning up older ebuilds.

  29 Mar 2005; Markus Rothe <corsair@gentoo.org>
  hwdata-knoppix-0.107-r1.ebuild:
  Stable on ppc64

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  27 Dec 2004; Markus Rothe <corsair@gentoo.org>
  hwdata-knoppix-0.107-r1.ebuild:
  Added ~ppc64 to KEYWORDS

*hwdata-knoppix-0.107-r1 (10 Dec 2004)

  10 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  +hwdata-knoppix-0.107-r1.ebuild, -hwdata-knoppix-0.107.ebuild:
  Bumping to latest revision.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  hwdata-knoppix-0.107.ebuild:
  Masked hwdata-knoppix-0.107.ebuild stable for ppc

  23 Aug 2004; Bryan Østergaard <kloeri@gentoo.org>
  hwdata-knoppix-0.107.ebuild:
  Stable on alpha.

  30 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  +files/hwdata-knoppix-0.107-binary_drivers.patch,
  hwdata-knoppix-0.107.ebuild:
  Added a patch to enable support for detection of ati and nvidia binary drivers
  if both livecd and opengl in USE.

  02 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  hwdata-knoppix-0.107.ebuild:
  Adding ~alpha since it was in previous ebuilds and there is alpha-compatable
  hardware listed.

  30 May 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  hwdata-knoppix-0.107.ebuild, hwdata-knoppix-0.8.ebuild,
  hwdata-knoppix-0.95.ebuild:
  QA cleanup

  21 May 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  hwdata-knoppix-0.107.ebuild:
  Stabilizing on x86.

*hwdata-knoppix-0.107 (14 May 2004)
