@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/kudzu-knoppix
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/kudzu-knoppix/Attic/ChangeLog,v 1.19 2005/06/16 16:54:46 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/kudzu-knoppix/Attic/ChangeLog,v 1.20 2005/06/22 14:03:52 wolf31o2 Exp $
+
+  22 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  kudzu-knoppix-1.1.36-r1.ebuild, kudzu-knoppix-1.1.36-r2.ebuild:
+  Added ~sparc on request of gustavoz.
 
   16 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   kudzu-knoppix-1.1.36-r1.ebuild, kudzu-knoppix-1.1.36-r2.ebuild:
